Fix overflow issue with sitesub, make redlinks less purple

--- a/resources/main.less
+++ b/resources/main.less
@@ -25,12 +25,12 @@ a:visited {
 #p-personal a.new,
 .new a,
 a.new {
-	color: #a07
+	color: #a03
 }
 #p-personal a.new:visited,
 .new a:visited,
 a.new:visited {
-	color: #705
+	color: #703
 }
 a.external {
 	color: #07a;
@@ -161,6 +161,7 @@ a.external:visited {
 	#header-navigation {
 		padding: 0 1.5em;
 		font-size: 90%;
+		clear: both;
 		height: 20px !ie;
 		padding-top: .5em !ie;
 
